--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
+    "swiper": "^6.8.1",
     "vee-validate": "^4.4.6",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
